fix sdk with new contracts
add sdk functions to set and claim rewards, add deployment scripts to the incentives controller

fix: incentives controller unit tests

cleanup sdk for consistent price access, change mainnet chainlink heartbeat to infinity

incentives controller event add params

use numRewards instead of decimals

more detail to RewardAccrued Event

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -17,12 +17,15 @@
     "ts-node": "^10.9.1"
   },
   "scripts": {
-    "build": "yarn tsc",
-    "test": "yarn build && mocha --timeout 0 --reporter spec",
-    "test:analytics": "yarn build && mocha --timeout 0 --reporter spec --grep Analytics",
-    "test:specific": "yarn build && mocha --timeout 0 --reporter spec --grep ConfigureTranche",
+    "build": "yarn update:deployed-contracts && yarn tsc",
+    "test": "yarn build && NETWORK=localhost mocha --timeout 0 --reporter spec",
+    "test-unit": "yarn build && NETWORK=localhost mocha --timeout 0 --reporter spec --grep $TEST",
+    "test-goerli": "yarn build && NETWORK=goerli mocha --timeout 0 --reporter spec",
+    "test:analytics": "yarn build && NETWORK=localhost mocha --timeout 0 --reporter spec --grep Analytics",
     "fund:accounts": "mocha dev --timeout 0 --reporter spec",
-    "fund:goerli:accounts": "mocha dev --timeout 0 --reporter spec --grep Get_goerli"
+    "fund:vaultOfRewards": "mocha dev --timeout 0 --reporter spec --grep Fund_vault",
+    "fund:goerli:accounts": "mocha dev --timeout 0 --reporter spec --grep Get_goerli",
+    "update:deployed-contracts": "cp ../contracts/deployed-contracts.json ./src.ts"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.4",
