--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -80,9 +80,8 @@
     "ci:test": "npm run compile && npm run test",
     "ci:clean": "rm -rf ./artifacts ./cache ./types",
     "print-contracts:main": "npm run hardhat:main -- print-contracts",
-    "main:deployUniswapRepayAdapter": "hardhat --network main deploy-UniswapRepayAdapter --provider 0xB53C1a33016B2DC2fF3653530bfF1848a515c8c5 --router 0x7a250d5630B4cF539739dF2C5dAcb4c659F2488D --weth 0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
-    "main:UniswapLiquiditySwapAdapter": "hardhat --network main deploy-UniswapLiquiditySwapAdapter  --provider 0xB53C1a33016B2DC2fF3653530bfF1848a515c8c5 --router 0x7a250d5630B4cF539739dF2C5dAcb4c659F2488D --weth 0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
-    "main:ParaSwapLiquiditySwapAdapter": "hardhat --network main deploy-ParaSwapLiquiditySwapAdapter --provider 0xB53C1a33016B2DC2fF3653530bfF1848a515c8c5 --augustusRegistry 0xa68bEA62Dc4034A689AA0F58A76681433caCa663",
+    "localhost:deployIncentivesController": "hardhat --network localhost deploy-IncentivesController",
+    "main:deployIncentivesController": "hardhat --network main deploy-IncentivesController",
     "mainnet:verify": "npm run hardhat:main verify:general -- --all --pool Aave",
     "matic:mumbai:verify": "npm run hardhat:mumbai verify:general -- --all --pool Matic",
     "matic:mainnet:verify": "npm run hardhat:matic verify:general -- --all --pool Matic",
