--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -13,6 +13,7 @@
     "hardhat": "hardhat",
     "build": "tsc",
     "start:dev": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node:fork:main\"  \"yarn vmex:deploy:fork:main\"",
+    "start:dev:optimism": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node:fork:optimism\"  \"yarn vmex:deploy:fork:optimism\"",
     "scripts:priceFeed": "hardhat run scripts/test-priceFeed.ts",
     "scripts:userBalance": "hardhat run scripts/test-userBalance.ts",
     "hardhat:tenderly-main": "hardhat --network tenderly",
