init, showed that wbtc works
changed test to determine gas cost with a lot of coins as collateral

fixed tests, disable ability to turn collateral on for onBehalfOf

fixed tests:

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -15,6 +15,7 @@
     "start:dev": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node:fork:main\"  \"yarn vmex:deploy:fork:main\"",
     "start:dev:optimism": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node:fork:optimism\"  \"yarn vmex:deploy:fork:optimism\"",
     "scripts:priceFeed": "hardhat run scripts/test-priceFeed.ts",
+    "scripts:getSlots": "hardhat run scripts/get_slot_info.ts",
     "scripts:userBalance": "hardhat run scripts/test-userBalance.ts",
     "hardhat:tenderly-main": "hardhat --network tenderly",
     "hardhat:main": "hardhat --network main",
@@ -116,6 +117,7 @@
     "chai-bn": "^0.2.1",
     "concurrently": "^7.3.0",
     "cross-env": "^7.0.3",
+    "cross-fetch": "^3.1.5",
     "defender-relay-client": "^1.7.0",
     "dotenv": "^8.2.0",
     "eth-sig-util": "2.5.3",
@@ -129,11 +131,14 @@
     "hardhat-test-utils": "^0.1.1",
     "hardhat-typechain": "^0.3.3",
     "husky": "^4.2.5",
+    "jsdom": "^22.0.0",
     "lodash": "^4.17.21",
     "lowdb": "1.0.0",
+    "node-fetch": "^3.3.1",
     "prettier": "^2.0.5",
     "prettier-plugin-solidity": "^1.0.0-alpha.53",
     "pretty-quick": "^2.0.1",
+    "slot20": "^0.0.3",
     "solidity-coverage": "^0.7.16",
     "temp-hardhat-etherscan": "^2.0.2",
     "tmp-promise": "^3.0.2",
