--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -4,12 +4,19 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '18.15.0'
+
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -26,7 +33,7 @@ jobs:
 
       - name: Clean
         run: yarn contracts ci:clean
-        
+
       - name: Compile
         run: yarn contracts compile
 
