--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -136,8 +136,10 @@
     "hardhat-typechain": "^0.3.3",
     "husky": "^4.2.5",
     "jsdom": "^22.0.0",
+    "keccak256": "^1.0.6",
     "lodash": "^4.17.21",
     "lowdb": "1.0.0",
+    "merkletreejs": "^0.3.10",
     "node-fetch": "^3.3.1",
     "prettier": "^2.0.5",
     "prettier-plugin-solidity": "^1.0.0-alpha.53",
