--- a/packages/contracts/certora/confs/AssetMappings.conf
+++ b/packages/contracts/certora/confs/AssetMappings.conf
@@ -3,8 +3,11 @@
     "files": [
         "contracts/protocol/lendingpool/AssetMappings.sol",
         "contracts/protocol/lendingpool/LendingPool.sol",
+        "certora/helpers/DummyERC20A.sol",
+        "certora/helpers/DummyERC20B.sol"
     ],
     "optimistic_loop": true,
+    "loop_iter" : "2",
     "rule_sanity": "basic",
     "send_only": true,
     "prover_args": [
