sdk generalization for optimisim
sepolia deployment scripts

test: importing contracts typescript from sdk

building typescript in contracts (#179)

building but missing files

build

fix gitignore

remove types and add dist to npm

remove types from git

Co-authored-by: yoyobojo <angellolazar@gmail.com>

adapt events for subgraph, fix sdk to remove hardcoded mainnet addresses

cleanup

fix github action since incentives are already deployed

--- a/packages/contracts/.env template
+++ b/packages/contracts/.env template
@@ -7,6 +7,9 @@ ALCHEMY_KEY= ""
 # alchemy key for optimism mainnet
 OP_ALCHEMY_KEY= ""
 
+# alchemy key for sepolia rpc
+SEPOLIA_ALCHEMY_KEY= ""
+
 # Optional Etherscan key, for automatize the verification of the contracts at Etherscan
 ETHERSCAN_KEY=""
 
