sepolia deployment scripts

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -47,6 +47,7 @@
     "vmex:deploy:fork:optimism": "npm run compile && FORK=optimism hardhat sidechain:mainnet --pool Optimism --network optimism_localhost",
     "vmex:dev:deploy": "npm run compile && hardhat vmex:dev --network localhost",
     "vmex:goerli:deploy": "npm run compile && hardhat vmex:dev --verify --network goerli",
+    "vmex:sepolia:deploy": "npm run compile && hardhat vmex:dev --verify --network sepolia",
     "vmex:dev:test": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test-suites/test-aave/__setup.spec.ts  ./test-suites/test-aave/*.spec.ts --network localhost",
     "vmex:dev:test-unit": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test-suites/test-aave/__setup.spec.ts  ./test-suites/test-aave/$TEST.spec.ts --network localhost",
     "vmex:mainnetfork:unit-tests": "FORK=main hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/*.spec.ts --network localhost",
@@ -81,6 +82,7 @@
     "ci:clean": "rm -rf ./artifacts ./cache ./types",
     "print-contracts:main": "npm run hardhat:main -- print-contracts",
     "main:deployIncentivesController": "hardhat --network main deploy-IncentivesController",
+    "sepolia:deployIncentivesController": "hardhat --network sepolia deploy-IncentivesController",
     "mainnet:verify": "npm run hardhat:main verify:general -- --all --pool Aave",
     "matic:mumbai:verify": "npm run hardhat:mumbai verify:general -- --all --pool Matic",
     "matic:mainnet:verify": "npm run hardhat:matic verify:general -- --all --pool Matic",
