--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -13,7 +13,7 @@
     "hardhat": "hardhat",
     "build": "tsc",
     "start:dev": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node:fork:main\"  \"yarn vmex:deploy:fork:main\"",
-    "start:dev:optimism": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node:fork:optimism\"  \"yarn vmex:deploy:fork:optimism && yarn localhost:optimism:deployIncentivesController\"",
+    "start:dev:optimism": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node:fork:optimism\"  \"yarn vmex:deploy:fork:optimism\"",
     "scripts:priceFeed": "hardhat run scripts/test-priceFeed.ts",
     "scripts:getSlots": "hardhat run scripts/get_slot_info.ts",
     "scripts:userBalance": "hardhat run scripts/test-userBalance.ts",
@@ -80,8 +80,6 @@
     "ci:test": "npm run compile && npm run test",
     "ci:clean": "rm -rf ./artifacts ./cache ./types",
     "print-contracts:main": "npm run hardhat:main -- print-contracts",
-    "localhost:deployIncentivesController": "hardhat --network localhost deploy-IncentivesController",
-    "localhost:optimism:deployIncentivesController": "hardhat --network optimism_localhost deploy-IncentivesController",
     "main:deployIncentivesController": "hardhat --network main deploy-IncentivesController",
     "mainnet:verify": "npm run hardhat:main verify:general -- --all --pool Aave",
     "matic:mumbai:verify": "npm run hardhat:mumbai verify:general -- --all --pool Matic",
