--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vmexfinance/contracts",
-  "version": "1.0.5-alpha",
+  "version": "1.0.6",
   "description": "VMEX V1 smart contracts",
   "private": false,
   "files": [
