--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@vmexfinance/sdk",
-  "version": "1.0.4-beta",
+  "version": "1.0.6",
   "description": "VMEX Finance - Software Development Kit",
   "main": "dist/index.js",
   "author": "VMEX finance",
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@vmexfinance/contracts": "^1.0.5-alpha",
+    "@vmexfinance/contracts": "1.0.6",
     "chai": "^4.3.6",
     "chai-bignumber": "^3.1.0",
     "cross-env": "^7.0.3",
