--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -8,6 +8,22 @@
     "artifacts",
     "dist"
   ],
+  "author": "VMEX Finance",
+  "contributors": [
+    "Kevin Yao <kevin@vmex.finance>",
+    "Steven Yao <steven@vmex.finance>",
+    "Mel0n <mel0n@vmex.finance>",
+    "Jay <jay@vmex.finance>",
+    "Flex <flex@vmex.finance>",
+    "ALo <alo@vmex.finance>"
+  ],
+  "license": "AGPLv3",
+  "keywords": [
+    "vmex",
+    "protocol",
+    "ethereum",
+    "solidity"
+  ],
   "scripts": {
     "run-env": "npm i && tail -f /dev/null",
     "hardhat": "hardhat",
@@ -93,6 +109,12 @@
     "get-uniswap-data": "hardhat get-uniswap-data --network localhost",
     "get-velo-gauge": "hardhat get-velo-gauge --network optimism_localhost"
   },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.9.2",
+    "hardhat": "^2.13.0",
+    "mocha": "^10.2.0",
+    "bignumber.js": "9.0.0"
+  },
   "devDependencies": {
     "@eth-optimism/plugins": "^1.0.0-alpha.3",
     "@nomiclabs/buidler": "^1.4.7",
@@ -112,7 +134,6 @@
     "@types/mocha": "7.0.2",
     "@types/node": "14.0.5",
     "axios-curlirize": "^1.3.7",
-    "bignumber.js": "9.0.0",
     "buidler-typechain": "0.1.1",
     "chai": "4.2.0",
     "chai-bignumber": "3.0.0",
@@ -160,25 +181,5 @@
       "pre-commit": "pretty-quick --staged --pattern 'contracts/**/*.sol' --pattern 'helpers/**/*.ts'  --pattern 'test-suites/test-aave/**/*.ts' --pattern 'tasks/**/*.ts'"
     }
   },
-  "author": "VMEX Finance",
-  "contributors": [
-    "Kevin Yao <kevin@vmex.finance>",
-    "Steven Yao <steven@vmex.finance>",
-    "Mel0n <mel0n@vmex.finance>",
-    "Jay <jay@vmex.finance>",
-    "Flex <flex@vmex.finance>"
-  ],
-  "license": "AGPLv3",
-  "dependencies": {
-    "@openzeppelin/contracts": "^4.9.2",
-    "hardhat": "^2.13.0",
-    "mocha": "^10.2.0"
-  },
-  "keywords": [
-    "vmex",
-    "protocol",
-    "ethereum",
-    "solidity"
-  ],
   "gitHead": "f9a5ba5f13088c9e857b0094e7133bcde2931862"
 }
