--- a/.github/workflows/make-public.yml
+++ b/.github/workflows/make-public.yml
@@ -2,7 +2,7 @@ name: Make Repo Public
 
 on:
   schedule:
-    - cron: '0 * * * *' # This will run the action every hour
+    - cron: "0 * * * *" # This will run the action every hour
 
 jobs:
   make-public:
@@ -12,5 +12,5 @@ jobs:
       - name: Make Repo Public
         uses: hats-finance/make_repo_public@v3
         with:
-          target_date: '1687150800'
+          target_date: "1690210800"
           gh_pat: ${{ secrets.GH_PAT }}
