--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -40,6 +40,7 @@
     "hardhat:matic": "hardhat --network matic",
     "hardhat:fuji": "hardhat --network fuji",
     "hardhat:avalanche": "hardhat --network avalanche",
+    "hardhat:sepolia": "hardhat --network sepolia",
     "compile": "SKIP_LOAD=true hardhat compile",
     "console:fork": "FORK=main hardhat console",
     "console:localhost:fork": "FORK=main hardhat console --network localhost",
@@ -103,6 +104,7 @@
     "matic:mumbai:verify:tokens": "npm run hardhat:mumbai verify:tokens -- --pool Matic",
     "matic:mainnet:verify:tokens": "npm run hardhat:matic verify:tokens -- --pool Matic",
     "mainnet:verify:tokens": "npm run hardhat:main verify:tokens -- --pool Aave",
+    "mainnet:sepolia:verify": "npm run hardhat:sepolia verify:general -- --all --pool Aave",
     "print-config:fork:mainnet": "FORK=main hardhat print-config:fork",
     "external:deploy-assets-main": "npm run compile && hardhat --network main external:deploy-new-asset --symbol ${SYMBOL} --verify",
     "prepublishOnly": "npm run compile",
@@ -122,6 +124,7 @@
     "@nomiclabs/buidler-etherscan": "^2.1.0",
     "@nomiclabs/buidler-waffle": "2.0.0",
     "@nomiclabs/hardhat-ethers": "^2.2.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@tenderly/hardhat-tenderly": "1.1.0-beta.5",
     "@typechain/ethers-v4": "1.0.0",
