--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -11,7 +11,6 @@
     "chai": "^4.3.6",
     "chai-bignumber": "^3.1.0",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.0.3",
     "node-ts-cache": "^4.4.0",
     "node-ts-cache-storage-memory": "^4.4.0",
     "ts-node": "^10.9.1"
@@ -23,6 +22,7 @@
     "test:optimism_localhost": "yarn build && NETWORK=optimism_localhost mocha --timeout 0 --reporter spec",
     "test-unit:optimism_localhost": "yarn build && NETWORK=optimism_localhost mocha --timeout 0 --reporter spec --grep $TEST",
     "test:goerli": "yarn build && NETWORK=goerli mocha --timeout 0 --reporter spec",
+    "test-unit:sepolia": "yarn build && NETWORK=sepolia mocha --timeout 0 --reporter spec --grep $TEST",
     "test:analytics": "yarn build && NETWORK=localhost mocha --timeout 0 --reporter spec --grep Analytics",
     "fund:accounts": "mocha dev --timeout 0 --reporter spec",
     "fund:vaultOfRewards": "mocha dev --timeout 0 --reporter spec --grep Fund_vault",
