--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -27,16 +27,21 @@
     "fund:accounts": "mocha dev --timeout 0 --reporter spec",
     "fund:vaultOfRewards": "mocha dev --timeout 0 --reporter spec --grep Fund_vault",
     "fund:goerli:accounts": "mocha dev --timeout 0 --reporter spec --grep Get_goerli",
-    "update:deployed-contracts": "cp ../contracts/deployed-contracts.json ./src.ts"
+    "update:deployed-contracts": "cp ../contracts/deployed-contracts.json ./src.ts",
+    "scripts:verify-tranche:sepolia": "NETWORK=sepolia FUNCTION=verify-tranche npx ts-node -r dotenv/config scripts/admin.ts",
+    "scripts:update-global-admin:sepolia": "NETWORK=sepolia FUNCTION=set-global-admin npx ts-node -r dotenv/config scripts/admin.ts",
+    "scripts:set-risk-params:sepolia": "NETWORK=sepolia FUNCTION=set-risk-params npx ts-node -r dotenv/config scripts/admin.ts"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.4",
     "@types/chai": "^4.3.3",
     "@types/node": "^18.11.9",
+    "dotenv": "^16.3.1",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.7.2",
     "lodash": "^4.17.21",
     "mocha": "^10.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "gitHead": "f6cc6e0820639f52a049ee13b1ed60e2529c04e2"
