set init params
finished setting init params

fix tests

rate strategies updated

fix issues with deployment

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -28,8 +28,9 @@
     "run-env": "npm i && tail -f /dev/null",
     "hardhat": "hardhat",
     "build": "tsc",
-    "start:dev": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node:fork:main\"  \"yarn vmex:deploy:fork:main\"",
+    "start:dev:mainnet": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node:fork:main\"  \"yarn vmex:deploy:fork:main\"",
     "start:dev:optimism": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node:fork:optimism\"  \"yarn vmex:deploy:fork:optimism\"",
+    "start:dev": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node\"  \"yarn vmex:dev:deploy\"",
     "scripts:priceFeed": "hardhat run scripts/test-priceFeed.ts",
     "scripts:getSlots": "hardhat run scripts/get_slot_info.ts",
     "scripts:userBalance": "hardhat run scripts/test-userBalance.ts",
