--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -93,6 +93,7 @@
     "vmex:main:full:migration": "npm run compile && npm run hardhat:main -- vmex:mainnet --verify",
     "vmex:main:full:initialize": "npm run compile && FORK=main full:initialize-tokens --pool Aave",
     "vmex:optimism:full:migration": "npm run compile && hardhat sidechain:mainnet --pool Optimism --network optimism --verify",
+    "vmex:optimism:upgrade:incentives": "npm run compile && hardhat vmex:upgrade-incentives --network optimism --verify",
     "vmex:permtranche": "hardhat vmex:permissionless-tranches --network goerli",
     "vmex:set-oracle": "hardhat vmex:set-oracle --network goerli",
     "prettier:check": "npx prettier -c 'tasks/**/*.ts' 'contracts/**/*.sol' 'helpers/**/*.ts'  'test-suites/test-aave/**/*.ts'",
