--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -7,7 +7,6 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@vmexfinance/contracts": "^1.1.1",
     "chai": "^4.3.6",
     "chai-bignumber": "^3.1.0",
     "cross-env": "^7.0.3",
@@ -25,6 +24,7 @@
     "test-unit:sepolia": "yarn build && NETWORK=sepolia mocha --timeout 0 --reporter spec --grep $TEST",
     "test:optimism": "yarn build && NETWORK=optimism mocha --timeout 0 --reporter spec",
     "test:analytics": "yarn build && NETWORK=localhost mocha --timeout 0 --reporter spec --grep Analytics",
+    "test:optimism:wethgateway": "yarn build && NETWORK=optimism mocha optimism_test --timeout 0 --reporter spec --grep WETHgateway",
     "fund:accounts": "mocha dev --timeout 0 --reporter spec",
     "fund:vaultOfRewards": "mocha dev --timeout 0 --reporter spec --grep Fund_vault",
     "fund:goerli:accounts": "mocha dev --timeout 0 --reporter spec --grep Get_goerli",
