--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.3",
   "description": "VMEX V1 smart contracts",
   "private": false,
+  "main": "dist/index.js",
   "files": [
     "contracts",
     "artifacts",
