--- a/packages/contracts/tsconfig.json
+++ b/packages/contracts/tsconfig.json
@@ -9,13 +9,11 @@
     "noImplicitAny": false,
     "esModuleInterop": true,
     "sourceMap": true,
-    "rootDir": "src",
-    "outDir": "dist",
+    "outDir": "./dist",
     "declaration": true,
     "skipLibCheck": true
   },
   "include": [
-    "src",
-    "artifacts",
+    "./src/*",
   ]
 }
