--- a/packages/contracts/tsconfig.json
+++ b/packages/contracts/tsconfig.json
@@ -14,7 +14,12 @@
     "skipLibCheck": true
   },
   "include": [
-    "./src/*",
-    "./artifacts/*" // TODO: compile this into dist as it's own folder
-  ]
+    "artifacts/*",
+    "src/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts",
+    "**/*.d.ts"
+]
 }
