--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -11,6 +11,7 @@
     "sourceMap": true,
     "outDir": "dist",
     "declaration": true,
+    "skipLibCheck": true,
     "types": [
       // "node"
     ],
