--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vmexfinance/contracts",
-  "version": "1.1.3",
+  "version": "1.0.0",
   "description": "VMEX V1 smart contracts",
   "private": false,
   "files": [
@@ -189,5 +189,8 @@
       "pre-commit": "pretty-quick --staged --pattern 'contracts/**/*.sol' --pattern 'helpers/**/*.ts'  --pattern 'test-suites/test-aave/**/*.ts' --pattern 'tasks/**/*.ts'"
     }
   },
-  "gitHead": "f6cc6e0820639f52a049ee13b1ed60e2529c04e2"
+  "gitHead": "a28c247a72b0ffb542341fd81ef0630be3ace396",
+  "publishConfig": {
+    "access": "public"
+  }
 }
