--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@vmexfinance/sdk",
-  "version": "1.1.2",
+  "version": "1.0.0",
   "description": "VMEX Finance - Software Development Kit",
   "main": "dist/index.js",
   "author": "VMEX finance",
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@vmexfinance/contracts": "^1.1.3",
+    "@vmexfinance/contracts": "^1.0.0",
     "chai": "^4.3.6",
     "chai-bignumber": "^3.1.0",
     "cross-env": "^7.0.3",
@@ -46,5 +46,8 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
-  "gitHead": "f6cc6e0820639f52a049ee13b1ed60e2529c04e2"
+  "gitHead": "a28c247a72b0ffb542341fd81ef0630be3ace396",
+  "publishConfig": {
+    "access": "public"
+  }
 }
