--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@vmexfinance/sdk",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "VMEX Finance - Software Development Kit",
   "main": "dist/index.js",
   "author": "VMEX finance",
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@vmexfinance/contracts": "^1.0.4",
+    "@vmexfinance/contracts": "^1.0.5",
     "chai": "^4.3.6",
     "chai-bignumber": "^3.1.0",
     "cross-env": "^7.0.3",
@@ -25,6 +25,7 @@
     "test-unit:sepolia": "yarn build && NETWORK=sepolia mocha optimism_test --timeout 0 --reporter spec --grep $TEST",
     "test:optimism": "yarn build && NETWORK=optimism mocha --timeout 0 --reporter spec",
     "test:analytics": "yarn build && NETWORK=localhost mocha --timeout 0 --reporter spec --grep Analytics",
+    "test:analytics:sepolia": "yarn build && NETWORK=sepolia mocha --timeout 0 --reporter spec --grep Analytics",
     "test:optimism:wethgateway": "yarn build && NETWORK=optimism mocha optimism_test --timeout 0 --reporter spec --grep WETHgateway",
     "test:optimism:getPrices": "yarn build && NETWORK=optimism mocha optimism_test --timeout 0 --reporter spec --grep getPrices",
     "fund:accounts": "mocha dev --timeout 0 --reporter spec",
