--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -43,6 +43,7 @@
     "hardhat:fuji": "hardhat --network fuji",
     "hardhat:avalanche": "hardhat --network avalanche",
     "hardhat:sepolia": "hardhat --network sepolia",
+    "hardhat:optimism": "hardhat --network optimism",
     "compile": "SKIP_LOAD=true hardhat compile",
     "console:fork": "FORK=main hardhat console",
     "console:localhost:fork": "FORK=main hardhat console --network localhost",
@@ -110,6 +111,7 @@
     "matic:mainnet:verify:tokens": "npm run hardhat:matic verify:tokens -- --pool Matic",
     "mainnet:verify:tokens": "npm run hardhat:main verify:tokens -- --pool Aave",
     "mainnet:sepolia:verify": "npm run hardhat:sepolia verify:general -- --all --pool Aave",
+    "vmex:optimism:verify": "npm run hardhat:optimism verify:general -- --all --pool Optimism",
     "print-config:fork:mainnet": "FORK=main hardhat print-config:fork",
     "external:deploy-assets-main": "npm run compile && hardhat --network main external:deploy-new-asset --symbol ${SYMBOL} --verify",
     "prepublishOnly": "npm run compile",
@@ -131,6 +133,8 @@
     "@nomiclabs/hardhat-ethers": "^2.2.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@safe-global/safe-ethers-adapters": "^0.1.0-alpha.19",
+    "@safe-global/safe-ethers-lib": "^1.9.4",
     "@tenderly/hardhat-tenderly": "1.1.0-beta.5",
     "@typechain/ethers-v4": "1.0.0",
     "@typechain/ethers-v5": "^2.0.0",
