--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -31,6 +31,7 @@
     "build": "tsc",
     "start:dev:mainnet": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node:fork:main\"  \"yarn vmex:deploy:fork:main\"",
     "start:dev:optimism": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node:fork:optimism\"  \"yarn vmex:deploy:fork:optimism\"",
+    "start:dev:base": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node:fork:base\"  \"yarn vmex:deploy:fork:base\"",
     "start:dev": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node\"  \"yarn vmex:dev:deploy\"",
     "scripts:priceFeed": "hardhat run scripts/test-priceFeed.ts",
     "scripts:getSlots": "hardhat run scripts/get_slot_info.ts",
@@ -44,6 +45,7 @@
     "hardhat:avalanche": "hardhat --network avalanche",
     "hardhat:sepolia": "hardhat --network sepolia",
     "hardhat:optimism": "hardhat --network optimism",
+    "hardhat:base": "hardhat --network base",
     "compile": "SKIP_LOAD=true hardhat compile",
     "console:fork": "FORK=main hardhat console",
     "console:localhost:fork": "FORK=main hardhat console --network localhost",
@@ -62,9 +64,11 @@
     "test:main:check-list": "npm run compile && FORK=main TS_NODE_TRANSPILE_ONLY=1 hardhat test  test-suites/test-aave/__setup.spec.ts test-suites/test-aave/mainnet/check-list.spec.ts",
     "vmex:node:fork:main": "FORK=main npx hardhat node --hostname 0.0.0.0",
     "vmex:node:fork:optimism": "FORK=optimism npx hardhat node --hostname 0.0.0.0",
+    "vmex:node:fork:base": "FORK=base npx hardhat node --hostname 0.0.0.0",
     "vmex:node": "npx hardhat node --hostname 0.0.0.0",
     "vmex:deploy:fork:main": "npm run compile && FORK=main hardhat vmex:mainnet --network localhost",
     "vmex:deploy:fork:optimism": "npm run compile && FORK=optimism hardhat sidechain:mainnet --pool Optimism --network optimism_localhost",
+    "vmex:deploy:fork:base": "npm run compile && FORK=base hardhat sidechain:mainnet --pool Base --network base_localhost",
     "vmex:dev:deploy": "npm run compile && hardhat vmex:dev --network localhost",
     "vmex:goerli:deploy": "npm run compile && hardhat vmex:dev --verify --network goerli",
     "vmex:sepolia:deploy": "npm run compile && hardhat vmex:dev --network sepolia",
@@ -74,6 +78,8 @@
     "vmex:mainnetfork:unit-test": "FORK=main hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/$TEST.spec.ts --network localhost",
     "vmex:OPfork:unit-tests": "FORK=optimism hardhat test ./localhost_tests_OP/__setup.spec.ts ./localhost_tests_OP/*.spec.ts --network optimism_localhost",
     "vmex:OPfork:unit-test": "FORK=optimism hardhat test ./localhost_tests_OP/__setup.spec.ts ./localhost_tests_OP/$TEST.spec.ts --network optimism_localhost",
+    "vmex:basefork:unit-tests": "FORK=base hardhat test ./localhost_tests_base/__setup.spec.ts ./localhost_tests_base/*.spec.ts --network base_localhost",
+    "vmex:basefork:unit-test": "FORK=base hardhat test ./localhost_tests_base/__setup.spec.ts ./localhost_tests_base/$TEST.spec.ts --network base_localhost",
     "vmex:docker:full:migration": "npm run compile && npm run hardhat:docker -- vmex:mainnet --skip-registry",
     "matic:mumbai:full:migration": "npm run compile && npm run hardhat:mumbai sidechain:mainnet -- --pool Matic --skip-registry",
     "matic:matic:full:migration": "npm run compile && npm run hardhat:matic sidechain:mainnet -- --pool Matic --skip-registry",
@@ -97,6 +103,7 @@
     "vmex:optimism:full:migration": "npm run compile && hardhat sidechain:mainnet --pool Optimism --network optimism --verify",
     "vmex:optimism:upgrade:incentives": "npm run compile && hardhat vmex:upgrade-incentives --network optimism --verify",
     "vmex:optimism:redeploy:weth-gateway": "npm run compile && hardhat full-redeploy-weth-gateway --pool Optimism --network optimism --verify",
+    "vmex:base:full:migration": "npm run compile && hardhat sidechain:mainnet --pool Base --network base --verify",
     "vmex:permtranche": "hardhat vmex:permissionless-tranches --network goerli",
     "vmex:set-oracle": "hardhat vmex:set-oracle --network goerli",
     "prettier:check": "npx prettier -c 'tasks/**/*.ts' 'contracts/**/*.sol' 'helpers/**/*.ts'  'test-suites/test-aave/**/*.ts'",
@@ -113,6 +120,8 @@
     "mainnet:sepolia:verify": "npm run hardhat:sepolia verify:general -- --all --pool Aave",
     "vmex:optimism:verify": "npm run hardhat:optimism verify:general -- --all --pool Optimism",
     "vmex:optimism:verify:tokens": "npm run hardhat:optimism verify:tokens -- --pool Optimism",
+    "vmex:base:verify": "npm run hardhat:base verify:general -- --all --pool Base",
+    "vmex:base:verify:tokens": "npm run hardhat:base verify:tokens -- --pool Base",
     "print-config:fork:mainnet": "FORK=main hardhat print-config:fork",
     "external:deploy-assets-main": "npm run compile && hardhat --network main external:deploy-new-asset --symbol ${SYMBOL} --verify",
     "prepublishOnly": "npm run compile",
@@ -122,7 +131,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.2",
     "bignumber.js": "9.0.0",
-    "hardhat": "^2.13.0",
+    "hardhat": "^2.17.2",
     "mocha": "^10.2.0"
   },
   "devDependencies": {
