reorg and test arb

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -69,6 +69,7 @@
     "vmex:deploy:fork:main": "npm run compile && FORK=main hardhat vmex:mainnet --network localhost",
     "vmex:deploy:fork:optimism": "npm run compile && FORK=optimism hardhat sidechain:mainnet --pool Optimism --network optimism_localhost",
     "vmex:deploy:fork:base": "npm run compile && FORK=base hardhat sidechain:mainnet --pool Base --network base_localhost",
+    "vmex:deploy:fork:arbitrum": "npm run compile && FORK=arbitrum hardhat sidechain:mainnet --pool Arbitrum --network arbitrum_localhost",
     "vmex:dev:deploy": "npm run compile && hardhat vmex:dev --network localhost",
     "vmex:goerli:deploy": "npm run compile && hardhat vmex:dev --verify --network goerli",
     "vmex:sepolia:deploy": "npm run compile && hardhat vmex:dev --network sepolia",
@@ -76,10 +77,12 @@
     "vmex:dev:test-unit": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test-suites/test-aave/__setup.spec.ts  ./test-suites/test-aave/$TEST.spec.ts --network localhost",
     "vmex:mainnetfork:unit-tests": "FORK=main hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/*.spec.ts --network localhost",
     "vmex:mainnetfork:unit-test": "FORK=main hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/$TEST.spec.ts --network localhost",
-    "vmex:OPfork:unit-tests": "FORK=optimism hardhat test ./localhost_tests_OP/__setup.spec.ts ./localhost_tests_OP/*.spec.ts --network optimism_localhost",
-    "vmex:OPfork:unit-test": "FORK=optimism hardhat test ./localhost_tests_OP/__setup.spec.ts ./localhost_tests_OP/$TEST.spec.ts --network optimism_localhost",
-    "vmex:basefork:unit-tests": "FORK=base hardhat test ./localhost_tests_base/__setup.spec.ts ./localhost_tests_base/*.spec.ts --network base_localhost",
-    "vmex:basefork:unit-test": "FORK=base hardhat test ./localhost_tests_base/__setup.spec.ts ./localhost_tests_base/$TEST.spec.ts --network base_localhost",
+    "vmex:OPfork:unit-tests": "FORK=optimism hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/*.spec.ts --network optimism_localhost",
+    "vmex:OPfork:unit-test": "FORK=optimism hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/$TEST.spec.ts --network optimism_localhost",
+    "vmex:basefork:unit-tests": "FORK=base hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/*.spec.ts --network base_localhost",
+    "vmex:basefork:unit-test": "FORK=base hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/$TEST.spec.ts --network base_localhost",
+    "vmex:arbfork:unit-tests": "FORK=arbitrum hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/*.spec.ts --network arbitrum_localhost",
+    "vmex:arbfork:unit-test": "FORK=arbitrum hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/$TEST.spec.ts --network arbitrum_localhost",
     "vmex:docker:full:migration": "npm run compile && npm run hardhat:docker -- vmex:mainnet --skip-registry",
     "matic:mumbai:full:migration": "npm run compile && npm run hardhat:mumbai sidechain:mainnet -- --pool Matic --skip-registry",
     "matic:matic:full:migration": "npm run compile && npm run hardhat:matic sidechain:mainnet -- --pool Matic --skip-registry",
@@ -89,21 +92,21 @@
     "matic:matic:full:migration:add-registry": "npm run compile && npm run hardhat:matic sidechain:mainnet -- --pool Matic",
     "avalanche:fuji:full:migration:add-registry": "npm run compile && npm run hardhat:fuji avalanche:mainnet -- --pool Avalanche",
     "avalanche:mainnet:full:migration:add-registry": "npm run compile && npm run hardhat:avalanche avalanche:mainnet -- --pool Avalanche",
-    "vmex:docker:add-market-to-registry-from-config": "npm run compile && npm run hardhat:docker -- add-market-to-registry --pool Aave",
+    "vmex:docker:add-market-to-registry-from-config": "npm run compile && npm run hardhat:docker -- add-market-to-registry --pool aave",
     "matic:mumbai:add-market-to-registry-from-config": "npm run compile && npm run hardhat:mumbai add-market-to-registry --pool Matic",
     "matic:matic:add-market-to-registry-from-config": "npm run compile && npm run hardhat:matic add-market-to-registry --pool Matic",
-    "vmex:main:add-market-to-registry-from-config": "npm run compile && npm run hardhat:main -- add-market-to-registry --pool Aave",
-    "vmex:docker:add-market-to-new-registry": "npm run compile && npm run hardhat:docker -- add-market-to-registry --pool Aave --deploy-registry",
+    "vmex:main:add-market-to-registry-from-config": "npm run compile && npm run hardhat:main -- add-market-to-registry --pool aave",
+    "vmex:docker:add-market-to-new-registry": "npm run compile && npm run hardhat:docker -- add-market-to-registry --pool aave --deploy-registry",
     "matic:mumbai:add-market-to-new-registry": "npm run compile && npm run hardhat:mumbai add-market-to-registry --pool Matic --verify --deploy-registry",
     "matic:matic:add-market-to-new-registry": "npm run compile && npm run hardhat:matic -- add-market-to-registry --pool Matic --verify --deploy-registry",
     "vmex:main:add-market-to-new-registry": "npm run compile && npm run hardhat:matic -- add-market-to-registry --pool Matic --verify --deploy-registry",
     "vmex:fork:main:tenderly": "npm run compile && npm run hardhat:tenderly-main -- vmex:mainnet",
     "vmex:main:full:migration": "npm run compile && npm run hardhat:main -- vmex:mainnet --verify",
-    "vmex:main:full:initialize": "npm run compile && FORK=main full:initialize-tokens --pool Aave",
-    "vmex:optimism:full:migration": "npm run compile && hardhat sidechain:mainnet --pool Optimism --network optimism --verify",
+    "vmex:main:full:initialize": "npm run compile && FORK=main full:initialize-tokens --pool aave",
+    "vmex:optimism:full:migration": "npm run compile && hardhat sidechain:mainnet --pool optimism --network optimism --verify",
     "vmex:optimism:upgrade:incentives": "npm run compile && hardhat vmex:upgrade-incentives --network optimism --verify",
-    "vmex:optimism:redeploy:weth-gateway": "npm run compile && hardhat full-redeploy-weth-gateway --pool Optimism --network optimism --verify",
-    "vmex:base:full:migration": "npm run compile && hardhat sidechain:mainnet --pool Base --network base --verify",
+    "vmex:optimism:redeploy:weth-gateway": "npm run compile && hardhat full-redeploy-weth-gateway --pool optimism --network optimism --verify",
+    "vmex:base:full:migration": "npm run compile && hardhat sidechain:mainnet --pool base --network base --verify",
     "vmex:sepolia:deploy:vmextoken": "npm run compile && hardhat deploy-VmexToken --network sepolia --verify",
     "vmex:permtranche": "hardhat vmex:permissionless-tranches --network goerli",
     "vmex:set-oracle": "hardhat vmex:set-oracle --network goerli",
@@ -112,17 +115,17 @@
     "ci:test": "npm run compile && npm run test",
     "ci:clean": "rm -rf ./artifacts ./cache ./types",
     "print-contracts:main": "npm run hardhat:main -- print-contracts",
-    "mainnet:verify": "npm run hardhat:main verify:general -- --all --pool Aave",
+    "mainnet:verify": "npm run hardhat:main verify:general -- --all --pool aave",
     "matic:mumbai:verify": "npm run hardhat:mumbai verify:general -- --all --pool Matic",
     "matic:mainnet:verify": "npm run hardhat:matic verify:general -- --all --pool Matic",
     "matic:mumbai:verify:tokens": "npm run hardhat:mumbai verify:tokens -- --pool Matic",
     "matic:mainnet:verify:tokens": "npm run hardhat:matic verify:tokens -- --pool Matic",
-    "mainnet:verify:tokens": "npm run hardhat:main verify:tokens -- --pool Aave",
-    "mainnet:sepolia:verify": "npm run hardhat:sepolia verify:general -- --all --pool Aave",
-    "vmex:optimism:verify": "npm run hardhat:optimism verify:general -- --all --pool Optimism",
-    "vmex:optimism:verify:tokens": "npm run hardhat:optimism verify:tokens -- --pool Optimism",
-    "vmex:base:verify": "npm run hardhat:base verify:general -- --all --pool Base",
-    "vmex:base:verify:tokens": "npm run hardhat:base verify:tokens -- --pool Base",
+    "mainnet:verify:tokens": "npm run hardhat:main verify:tokens -- --pool aave",
+    "mainnet:sepolia:verify": "npm run hardhat:sepolia verify:general -- --all --pool aave",
+    "vmex:optimism:verify": "npm run hardhat:optimism verify:general -- --all --pool optimism",
+    "vmex:optimism:verify:tokens": "npm run hardhat:optimism verify:tokens -- --pool optimism",
+    "vmex:base:verify": "npm run hardhat:base verify:general -- --all --pool base",
+    "vmex:base:verify:tokens": "npm run hardhat:base verify:tokens -- --pool base",
     "print-config:fork:mainnet": "FORK=main hardhat print-config:fork",
     "external:deploy-assets-main": "npm run compile && hardhat --network main external:deploy-new-asset --symbol ${SYMBOL} --verify",
     "prepublishOnly": "npm run compile",
