--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -32,6 +32,7 @@
     "start:dev:mainnet": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node:fork:main\"  \"yarn vmex:deploy:fork:main\"",
     "start:dev:optimism": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node:fork:optimism\"  \"yarn vmex:deploy:fork:optimism\"",
     "start:dev:base": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node:fork:base\"  \"yarn vmex:deploy:fork:base\"",
+    "start:dev:arbitrum": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node:fork:arbitrum\"  \"yarn vmex:deploy:fork:arbitrum\"",
     "start:dev": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node\"  \"yarn vmex:dev:deploy\"",
     "scripts:priceFeed": "hardhat run scripts/test-priceFeed.ts",
     "scripts:getSlots": "hardhat run scripts/get_slot_info.ts",
@@ -65,6 +66,7 @@
     "vmex:node:fork:main": "FORK=main npx hardhat node --hostname 0.0.0.0",
     "vmex:node:fork:optimism": "FORK=optimism npx hardhat node --hostname 0.0.0.0",
     "vmex:node:fork:base": "FORK=base npx hardhat node --hostname 0.0.0.0",
+    "vmex:node:fork:arbitrum": "FORK=arbitrum npx hardhat node --hostname 0.0.0.0",
     "vmex:node": "npx hardhat node --hostname 0.0.0.0",
     "vmex:deploy:fork:main": "npm run compile && FORK=main hardhat vmex:mainnet --network localhost",
     "vmex:deploy:fork:optimism": "npm run compile && FORK=optimism hardhat sidechain:mainnet --pool Optimism --network optimism_localhost",
